# AI-Powered-Enterprise-Platform

./: .env.example  .gitignore  EXCEL_API_DOCUMENTATION.md  FRONTEND_EMAIL_IMPLEMENTATION_PLAN.md  GIT_BEST_PRACTICES.md  Implementation_Plan.md  OAUTH_SETUP_GUIDE.md  RBAC_DOCUMENTATION.md  README.md  ROLE_CASE_FIX.md  SMTP_QUICK_REFERENCE.md  docker-compose.yml  pyproject.toml  pytest.ini  test_ai_integration.py
backend/: .env.example  API_DOCUMENTATION.md  API_LAYER_DOCUMENTATION.md  SETUP_GUIDE.md  SMTP_SETUP_GUIDE.md  __init__.py  alembic.ini  check_document.py  check_schema.py  configure_smtp.py  debug_langchain.py  debug_user_model.py  main.py  milestone_1_1_review_20250924_112333.json  package-lock.json  package.json  pyproject.toml  requirements.txt  run_milestone_review.py  simple_email_test.py  test_api_call.py  test_image_generation.py  test_password_reset.py  test_smtp.py
backend/alembic/: env.py
backend/alembic/versions/: 053765c1e5b0_add_missing_user_fields.py  0b9bfbacf32b_add_token_blacklist_table.py  2609520fe8b3_add_password_reset_fields.py  81442f6131a9_add_excel_tables.py  (+17 more)
backend/app/: __init__.py
backend/scripts/: add_last_logout_column.py  check_excel_tables.py  create_test_login_user.py  debug_user_role.py  drop_excel_tables.py  fix_admin_user.py  fix_auth_roles.py  fix_user_role.py  list_admin_users.py  promote_to_superadmin.py  recreate_tables.py  run_dev_server.py  setup_database.py  start_services.bat  start_services.sh  test_email.py  test_password_reset.py  validate_user_model.py
backend/src/: __init__.py
backend/tests/: __init__.py
(+344 files in other folders)
